--- a/ReadMe
+++ b/ReadMe
@@ -3,6 +3,6 @@
 To use this website:
 Download the project and run index.html
 
-Document : Please download hackathon.pdf for documentations
+Document : Please download hackathon.pdf file for documentations
 
 Youtube Link : https://www.youtube.com/watch?v=8MaVd5f001k&t=9s
